--- a/app/templates/home/nfr.html
+++ b/app/templates/home/nfr.html
@@ -21,7 +21,7 @@
                                             <label class="col-form-nfr-label mb-0">Name:</label>
                                         </div>
                                         <div class="marging-10 flex-grow-1 me-3">
-                                            <input name="test_name" id="test_name" class="form-control" required>
+                                            <input name="test_name" id="test_name" class="form-control" required placeholder="e.g. my-nfr">
                                         </div>
 
                                         <!-- New Switcher UI -->
@@ -93,7 +93,7 @@
                   </div>
                 </div>
                 <div class="nfr-col-l padding-10">
-                  <input name="scope" class="form-control scope-nfr-field" required>
+                  <input name="scope" class="form-control scope-nfr-field" required placeholder="e.g. my-request">
                   <div class="valid-feedback">Looks good!</div>
                   <div class="invalid-feedback">Please provide a valid data.</div>
                 </div>
@@ -116,7 +116,7 @@
                   <div class="invalid-feedback">Please provide a valid data.</div>
                 </div>
                 <div class="nfr-col-m padding-10">
-                  <input name="threshold" class="form-control threshold-nfr-field" step="0.001" type="number" required>
+                  <input name="threshold" class="form-control threshold-nfr-field" step="0.001" type="number" required placeholder="e.g. 100">
                   <div class="valid-feedback">Looks good!</div>
                   <div class="invalid-feedback">Please provide a valid data.</div>
                 </div>
