--- a/app/templates/home/secrets.html
+++ b/app/templates/home/secrets.html
@@ -29,7 +29,6 @@
                                         <thead>
                                             <tr>
                                                 <th class="sort" data-sort="key">Key</th>
-                                                <th class="sort" data-sort="type">Type</th>
                                                 <th class="sort" data-sort="project_id">Scope</th>
                                                 <th>Actions</th>
                                             </tr>
@@ -112,10 +111,6 @@
                                 row.appendChild(keyCell);
 
                                 // Type
-                                const typeCell = document.createElement('td');
-                                typeCell.className = 'type';
-                                typeCell.textContent = secret.type;
-                                row.appendChild(typeCell);
 
                                 // Scope
                                 const scopeCell = document.createElement('td');
@@ -133,7 +128,7 @@
 
                                 const editBtn = document.createElement('a');
                                 editBtn.className = 'btn btn-primary';
-                                editBtn.href = `/edit_secret?secret_id=${secret.id}&secret_type=${secret.type}`;
+                                editBtn.href = `/edit_secret?secret_id=${secret.id}`;
                                 editBtn.textContent = 'Edit';
                                 actionsCell.appendChild(editBtn);
 
@@ -152,7 +147,7 @@
                             });
 
                             const options = {
-                                valueNames: ['key', 'type', 'project_id'],
+                                valueNames: ['key', 'project_id'],
                                 page: 15,
                                 pagination: true
                             };
